objects/VisitOps__Presenter__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__Base_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Location</label>
        <referenceTo>VisitOps__Location__c</referenceTo>
        <relationshipLabel>Presenters</relationshipLabel>
        <relationshipName>Presenters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Department__c</fullName>
        <description>Department of the Presenter</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Email__c</fullName>
        <description>Email Address of the Presenter</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VisitOps__FirstName__c</fullName>
        <description>FirstName of the Presenter</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__LastName__c</fullName>
        <description>LastName of the Presenter</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Mobile__c</fullName>
        <description>Mobile Number of the Presenter</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VisitOps__Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Phone__c</fullName>
        <description>Phone Number of the Presenter</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>VisitOps__Prefix__c</fullName>
        <label>Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                    <default>true</default>
                    <label>Mr.</label>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Bio_Link__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presenter Bio Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Bio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presenter Bio</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Category__c</fullName>
        <label>Presenter Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Email__c</fullName>
        <formula>VisitOps__User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenter Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Image__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presenter Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Name__c</fullName>
        <description>Full Name of the Presenter</description>
        <formula>IF(ISBLANK(VisitOps__FirstName__c), VisitOps__LastName__c, VisitOps__FirstName__c+&apos; &apos;+VisitOps__LastName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Name_on_Agenda__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presenter Name on Agenda</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Rating__c</fullName>
        <label>Presenter Rating</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Suffix__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presenter Suffix</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Presenter_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presenter Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Title__c</fullName>
        <description>Position/ Title of the Presenter</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Presenters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Presenter</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Presenter_Name__c</columns>
        <columns>VisitOps__Title__c</columns>
        <columns>VisitOps__Email__c</columns>
        <columns>VisitOps__Mobile__c</columns>
        <columns>VisitOps__Phone__c</columns>
        <columns>VisitOps__Base_Location__c</columns>
        <columns>VisitOps__User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP{0000}</displayFormat>
        <label>Presenter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presenters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VisitOps__Base_Location_is_mandatory</fullName>
        <active>true</active>
        <description>Base Location is mandatory</description>
        <errorConditionFormula>ISBLANK(VisitOps__Base_Location__c)</errorConditionFormula>
        <errorDisplayField>VisitOps__Base_Location__c</errorDisplayField>
        <errorMessage>Base Location is mandatory</errorMessage>
    </validationRules>
</CustomObject>